# pyspeedinsights

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
src/pyspeedinsights/: __main__.py  app.py
src/pyspeedinsights/api/: keys.py  request.py  response.py
src/pyspeedinsights/cli/: choices.py  commands.py
src/pyspeedinsights/conf/: data.py  settings.py
src/pyspeedinsights/core/: api.py  commands.py  excel.py  parser.py  process.py  sitemap.py
src/pyspeedinsights/utils/: exceptions.py  generic.py  urls.py
tests/: __main__.py  test_utils.py
tests/api/: conftest.py  test_keys.py  test_response.py
tests/commands/: conftest.py  test_arg_parser.py
tests/excel/: sample_data.py  test_excel.py
tests/sitemap/: conftest.py  test_processing.py  test_requests.py  test_sitemaps.py  test_urls.py
tests/sitemap/data/: sitemap.xml  sitemap_index.xml  sitemap_invalid.xml  sitemap_invalid_tag.xml
tests/utils/: test_utils.py
