[metadata]
name = pyspeedinsights
version = 0.0.1
author = Will J. Holmes
author_email = willholmes95@gmail.com
description = A simple Python wrapper for the PageSpeed Insights API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wjh18/PySpeedInsights
project_urls =
    Bug Tracker = https://github.com/wjh18/PySpeedInsights/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    XlsxWriter
    keyring
    aiohttp[speedups]

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    isort
    black
    safety
    bandit
    pre-commit

[options.entry_points]
console_scripts =
    psi = pyspeedinsights.app:main

[flake8]
exclude =
    dist,
    build,
    .tox,
    __pycache__,
    .venv,
    .git
extend-ignore = E203
max-line-length = 88
