[metadata]
name = pyspeedinsights
version = 0.1.0
author = Will J. Holmes
author_email = will@wjholmes.com
description = A simple Python cli that parses your sitemap, sends async requests to the PageSpeed Insights API and writes color-coded Lighthouse results to Excel.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = google, google-apis, psi-api, page-speed-insights, page-speed-insights-api, pagespeedinsightsapi, python, cli
url = https://github.com/wjh18/pyspeedinsights
project_urls =
    Documentation = https://github.com/wjh18/pyspeedinsights/blob/master/README.md
    Source = https://github.com/wjh18/pyspeedinsights
    Tracker = https://github.com/wjh18/pyspeedinsights/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    XlsxWriter
    keyring
    aiohttp[speedups]

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-datadir
    flake8
    isort
    black
    safety
    bandit
    pre-commit

[options.entry_points]
console_scripts =
    psi = pyspeedinsights.app:main

[flake8]
exclude =
    dist,
    build,
    .tox,
    __pycache__,
    .venv,
    .git
extend-ignore = E203
max-line-length = 88
